Добавил возможность делать кукисы Insecure поскольку при тесте для localhost все secure кукисы сбрасываются браузером (бред если честно)
